--- a/app-TFG/src/index.html
+++ b/app-TFG/src/index.html
@@ -14,7 +14,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   </head>
-  <body class="mat-typography margin-page" >
+  <body class="mat-typography margin-page p-3 mb-2 bg-light text-dark" >
     <app-root></app-root>
   </body>
 </html>
